Bug#10201 group_concat returns string with binary collation item.cc:   After merge fixes. func_gconcat.result:   After merge fixes